--- a/mqttpublishplugin/src/main/AndroidManifest.xml
+++ b/mqttpublishplugin/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.nosybore.mqttpublishplugin"
-    android:versionCode="3"
-    android:versionName="1.1.1" >
+    android:versionCode="4"
+    android:versionName="1.2.0" >
 
     <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="22"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:icon="@drawable/ic_launcher" android:label="@string/app_name">
 
         <activity
             android:name="EditActivity"
