--- a/mqttpublishplugin/build.gradle
+++ b/mqttpublishplugin/build.gradle
@@ -22,5 +22,6 @@ android {
 
 dependencies {
     compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.0.2'
+    compile 'com.google.android.gms:play-services-base:7.8.0'
     compile project(':locale')
 }
