--- a/mqttpublishplugin/build.gradle
+++ b/mqttpublishplugin/build.gradle
@@ -1,27 +1,20 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion '23.0.1'
     defaultConfig {
         applicationId 'net.nosybore.mqttpublishplugin'
         minSdkVersion 11
-        targetSdkVersion 22
-        versionCode 4
-        versionName '1.2.0'
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-        }
-    }
-    productFlavors {
+        targetSdkVersion 23
+        versionCode 6
+        versionName '1.3.1'
+        resConfigs "en"
     }
 }
 
 dependencies {
     compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.0.2'
-    compile 'com.google.android.gms:play-services-base:7.8.0'
     compile project(':locale')
+    compile 'com.google.android.gms:play-services-base:8.1.0'
 }
